20110729 Bug:  PRD Reviewer:  Self Comments:  Parameterized when long task name word wrapping goes into affect.
Files:
M    gwt/src/org/kablink/teaming/gwt/server/util/GwtTaskHelper.java
M    gwt/src/org/kablink/teaming/gwt/client/tasklisting/TaskTable.java
M    gwt/src/org/kablink/teaming/gwt/client/util/TaskBundle.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -3308,14 +3308,21 @@ a.gwtTaskList_task-icon:hover
 .gwtTaskList_task-nameAnchor, .gwtTaskList_task-nameAnchor:visited
 {
 	color:        #135c8f !important;
-	white-space:  normal  !important;
-	position:     absolute;
 }
 .gwtTaskList_task-nameAnchor:hover
 {
 	background: #cce9ee;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
+}
+.gwtTaskList_task-nameAnchor_Wrap
+{
+	position:    absolute;
+	white-space: normal !important;
+}
+.gwtTaskList_task-nameAnchor_NoWrap
+{
+	white-space: nowrap !important;
 }
 .gwtTaskList_task-nameCell
 {
